--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <meta name="msapplication-TileColor" content="#C0D72E" />
         <meta name="msapplication-config" content="/favicons/browserconfig.xml" />
         <meta name="theme-color" content="#C0D72E" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
         <title>Art & Coop Commessa</title>
     </head>
 
